# VelixInstaller

./: CMakeLists.txt
.github/workflows/: build.yaml
include/: AppUpdateChecker.hpp  AppVersion.hpp  Config.hpp  CrashReportDialog.hpp  DocumentationWidget.hpp  FileDownloader.hpp  FireButton.hpp  FireLogoWidget.hpp  FireWidget.hpp  HomeWidget.hpp  InstallData.hpp  InstallWidget.hpp  Installer.hpp  LeftWidget.hpp  MainWidget.hpp  MainWindow.hpp  PluginManagerDialog.hpp  ProjectData.hpp  ProjectSettingsDialog.hpp  ProjectWidget.hpp  ProjectsHandlerWidget.hpp  ProjectsWidget.hpp  ReleaseChecker.hpp  SamplesWidget.hpp  Separator.hpp  SettingsWidget.hpp  SplashOverlay.hpp  TabWidget.hpp  Theme.hpp  ToastNotification.hpp  UpdateDownloadDialog.hpp  UpdateWidget.hpp  VelixConfirmDialog.hpp  VersionWidget.hpp  VersionsWidget.hpp
include/widgets/: VelixProgressBar.hpp  VelixText.hpp
project_template/: Project.elixirproject
project_template/export/: CMakeLists.txt  main.cpp
project_template/scenes/: default_scene.scene
project_template/settings/: editor_settings.json
project_template/sources/: CMakeLists.txt  GameModule.cpp  GameScript.cpp  GameScript.hpp
resources/: news.json  samples_manifest.json
resources/docs/: components.md  getting-started.md  plugins.md  scripting.md  sdk.md
resources/project_template/: CMakeLists.txt  CmakePresets.json  default_scene.scene  project.elixproject  project.settings
resources/project_template/Sources/: GameModule.cpp  Test.cpp
src/: AppUpdateChecker.cpp  Config.cpp  CrashReportDialog.cpp  DocumentationWidget.cpp  FileDownloader.cpp  FireButton.cpp  FireLogoWidget.cpp  FireWidget.cpp  HomeWidget.cpp  InstallWidget.cpp  Installer.cpp  LeftWidget.cpp  MainWidget.cpp  MainWindow.cpp  PluginManagerDialog.cpp  ProjectSettingsDialog.cpp  ProjectWidget.cpp  ProjectsHandlerWidget.cpp  ProjectsWidget.cpp  ReleaseChecker.cpp  SamplesWidget.cpp  Separator.cpp  SettingsWidget.cpp  SplashOverlay.cpp  TabWidget.cpp  ToastNotification.cpp  UpdateDownloadDialog.cpp  UpdateWidget.cpp  VelixConfirmDialog.cpp  VersionWidget.cpp  VersionsWidget.cpp  main.cpp
src/widgets/: VelixProgressBar.cpp  VelixText.cpp
